crates/specforge-cli/tests/snapshots/tests__parity__add_builtin__cli.snap
---
source: crates/specforge-cli/tests/parity.rs
expression: cli_snap
---
{
  "check": {
    "diagnostics": [
      "Warning W001"
    ],
    "ok": true
  },
  "config": {
    "extensions": [
      "@specforge/software",
      "@specforge/product"
    ],
    "name": "demo",
    "registries": [
      {
        "alias": "offline",
        "default_registry": true,
        "url": "http://127.0.0.1:9/v1"
      }
    ],
    "spec_root": "spec",
    "version": "0.1.0"
  },
  "files": {
    "spec/main.spec": "behavior alpha \"Alpha\" {\n  category \"core\"\n  contract \"The system MUST work\"\n}\n"
  },
  "ok": true,
  "payload": {
    "action": "add",
    "changed": true,
    "name": "@specforge/product",
    "peers_enabled": [],
    "source": "builtin"
  }
}
